--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,23 @@
 body {
-	background-color: BurlyWood;
+	background-color: Black;
 }
 h1 {
 	display: flex;
 	justify-content: center;
-	color: Chocolate;
+	font-size: 100px;
 }
-div {
+h2 {
+	color: DarkOrange;
 	display: flex;
 	justify-content: center;
-	color: Chocolate;
+	font-size: 40px;
 }
-p {
+div {
+	color: DarkOrange;
+	display: flex;
+	justify-content: center;
 	font-size: 20px;
+}
+button{
+	background-color: DarkOrange;
 }
